# sdocx2pdf

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
sdocx/: Cargo.toml
sdocx/src/: bits.rs  byte_stream.rs  context.rs  doc.rs  end_tag.rs  lib.rs  media_info.rs  note_doc.rs  page.rs
sdocx/src/page/: header.rs  object.rs
sdocx/src/page/object/: audio.rs  base.rs  header.rs  image.rs  line.rs  painting.rs  shape.rs  shape_base.rs  shared.rs  stroke.rs  table.rs  text.rs  text_core.rs  web.rs
sdocx2pdf/: Cargo.toml
sdocx2pdf/src/: main.rs  op_gen.rs  shape.rs  stroke.rs  tool.rs
src/: bits.rs  byte_stream.rs  doc.rs  end_tag.rs  main.rs  media_info.rs  note_doc.rs  page.rs  page_id_info.rs  page_list.rs
src/page/: header.rs  object.rs
src/page/object/: audio.rs  base.rs  header.rs  image.rs  line.rs  painting.rs  shape.rs  shape_base.rs  shared.rs  stroke.rs  text.rs  text_core.rs  voice.rs  web.rs
