[package]
name = "sdocx"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
byteorder = "1"
chrono = "0.4.43"
sha2 = "0.10.9"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
thiserror = "2"
zip = { version = "8", default-features = false, features = [
    "deflate",
    "deflate64",
] }
either = "1.16.0"
