[package]
name = "sdocx2pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
euclid = "0.22"
itertools = "0.14.0"
lerp = "0.5.0"
num = "0.4.3"
scirs2-interpolate = "0.5.0"
ndarray = "0.17"
sdocx = { path = "../sdocx" }
kahan = "0.1.4"
gaussfilt = "0.1.3"
once_cell = "1.21.4"
thiserror = "2.0.18"
ordered-float = "5.3.0"
indicatif = "0.18.4"
lopdf = "0.42.0"
